fixed an issue where if there was no song there'd be white space

--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -9,6 +9,8 @@ html{
 .wrapper{
     width: 100%;
     margin: 0 auto;
+    height: 100vh;
+    overflow: auto;
 }
 
 .mainContainer h1{
@@ -162,5 +164,17 @@ textarea{
 @media only screen and (max-width : 435px) {
     .mainContainer h1{
         font-size: 10rem;
+    }
+}
+
+@media only screen and (max-width : 360px) {
+    .mainContainer h1{
+        font-size: 9rem;
+    }
+}
+
+@media only screen and (max-width : 320px) {
+    .mainContainer h1{
+        font-size: 8rem;
     }
 }
